--- a/SAPWeb/Views/SalesQuotation/Create.cshtml
+++ b/SAPWeb/Views/SalesQuotation/Create.cshtml
@@ -94,7 +94,7 @@
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
-                        <label for="ddlBillToID">BillTo ID *</label>
+                        <label for="ddlBillToID">BillTo ID</label>
                         <select id="ddlBillToID" class="form-control" data-BillTo="@Model.PayToCode">
                             <option>Select Bill To ID</option>
                         </select>
@@ -108,7 +108,7 @@
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
-                        <label for="ddlShipTOID ">ShipTO ID *</label>
+                        <label for="ddlShipTOID ">ShipTO ID</label>
                         <select id="ddlShipTOID" class="form-control" data-ShipTo="@Model.ShipToCode">
                             <option>Select Ship TO ID</option>
                         </select>
