--- a/SAPWeb/Views/SalesQuotation/Index.cshtml
+++ b/SAPWeb/Views/SalesQuotation/Index.cshtml
@@ -33,6 +33,7 @@
                             <th>DocNumber</th>
                             <th>DocumentDate</th>
                             <th>OwnerName</th>
+                            <th>DocTotal</th>
                             <th>Status</th>
                             <th>Action</th>
                         </tr>
