--- a/SAPWeb/Views/Invoice/Index.cshtml
+++ b/SAPWeb/Views/Invoice/Index.cshtml
@@ -10,6 +10,9 @@
     #tblSalesOrder tbody td {
         padding: 5px; /* Adjust the padding as needed */
     }
+    .table-container {
+        overflow-x: auto; /* Enable horizontal scrolling */
+    }
 </style>
 <div class="row">
     <div class="col-md-6">
@@ -22,7 +25,7 @@
 <div class="row">
     <div class="col-12">
         <div class="white-box">
-            <div class="table-responsive">
+            <div class="table-container">
                 <table class="table" id="tblSalesOrder" width="100%">
                     <thead>
                         <tr>
@@ -33,6 +36,9 @@
                             <th>DocNumber</th>
                             <th>DocumentDate</th>
                             <th>OwnerName</th>
+                            <th>DocTotal</th>
+                            <th>Payment Type</th>
+                            <th>User Status</th>
                             <th>Status</th>
                             <th>Action</th>
                         </tr>
