--- a/SAPWeb/Views/SalesQuotation/Create.cshtml
+++ b/SAPWeb/Views/SalesQuotation/Create.cshtml
@@ -138,19 +138,19 @@
                 <div class="col-md-2">
                     <div class="form-group">
                         <label for="txtPostingDate">Posting Date *</label>
-                        <input type="text" class="form-control mydatepicker" id="txtPostingDate" value="@Model.PostingDate.Value.ToString("dd/MM/yyyy")" placeholder="dd/mm/yyyy" readonly>
+                        <input type="text" class="form-control mydatepicker" id="txtPostingDate" value="@CommonAttributes.GetDate(Model.PostingDate.Value.ToString()).ToString("yyyy-MM-dd")" placeholder="dd/mm/yyyy" readonly>
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
                         <label for="txtPostingDate">Due Date *</label>
-                        <input type="text" class="form-control mydatepicker" id="txtDueDate" value="@Model.DeliveryDate.Value.ToString("dd/MM/yyyy")" placeholder="dd/mm/yyyy">
+                        <input type="text" class="form-control mydatepicker" id="txtDueDate" value="@CommonAttributes.GetDate(Model.DeliveryDate.Value.ToString()).ToString("yyyy-MM-dd")" placeholder="dd/mm/yyyy">
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
                         <label for="txtPostingDate">Document Date *</label>
-                        <input type="text" class="form-control mydatepicker" id="txtDocumentDate" value="@Model.DocDate.ToString("dd/MM/yyyy")" placeholder="dd/mm/yyyy">
+                        <input type="text" class="form-control mydatepicker" id="txtDocumentDate" value="@CommonAttributes.GetDate(Model.DocDate.ToString()).ToString("yyyy-MM-dd")" placeholder="dd/mm/yyyy">
                     </div>
                 </div>
                 <div class="col-md-2">
