--- a/SAPWeb/Views/Invoice/Create.cshtml
+++ b/SAPWeb/Views/Invoice/Create.cshtml
@@ -126,7 +126,7 @@
             <div class="row">
                 <div class="col-md-2">
                     <div class="form-group">
-                        <label for="txtQuotationNumber ">Doc Number </label>
+                        <label for="txtQuotationNumber ">Next Invoice Number</label>
                         <input type="text" class="form-control" id="txtQuotationNumber" value="@Model.DocNum" readonly>
                     </div>
                 </div>
