--- a/SAPWeb/Views/Invoice/Index.cshtml
+++ b/SAPWeb/Views/Invoice/Index.cshtml
@@ -35,6 +35,7 @@
                             <th>DocEntry</th>
                             <th>DocNumber</th>
                             <th>DocumentDate</th>
+                            <th>URA Posted</th>
                             <th>OwnerName</th>
                             <th>DocTotal</th>
                             <th>Payment Type</th>
