--- a/SAPWeb/Views/SalesQuotation/Create.cshtml
+++ b/SAPWeb/Views/SalesQuotation/Create.cshtml
@@ -34,13 +34,13 @@
                 <div class="col-md-2">
                     <div class="form-group">
                         <label for="txtName">Customer Name</label>
-                        <input type="text" class="form-control" id="txtCustomerName" value="@Model.NumAtCard" placeholder="Enter Name">
+                        <input type="text" class="form-control" id="txtCustomerName" value="@Model.CardName" placeholder="Enter Name">
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
                         <label for="txtCustomerRefNo">Customer Ref. No.</label>
-                        <input type="text" class="form-control" id="txtCustomerRefNo" placeholder="Customer Ref. No.">
+                        <input type="text" class="form-control" id="txtCustomerRefNo" placeholder="Customer Ref. No." value="@Model.NumAtCard">
                     </div>
                 </div>
                 <div class="col-md-2">
