--- a/SAPWeb/Views/Invoice/Index.cshtml
+++ b/SAPWeb/Views/Invoice/Index.cshtml
@@ -36,7 +36,7 @@
                             <th>DocNumber</th>
                             <th>DocumentDate</th>
                             <th>URA Posted</th>
-                            <th>OwnerName</th>
+                            <th>Customer Ref</th>
                             <th>DocTotal</th>
                             <th>Payment Type</th>
                             <th>User Status</th>
