--- a/SAPWeb/Views/SalesQuotation/Index.cshtml
+++ b/SAPWeb/Views/SalesQuotation/Index.cshtml
@@ -32,7 +32,7 @@
                             <th>DocEntry</th>
                             <th>DocNumber</th>
                             <th>DocumentDate</th>
-                            <th>OwnerName</th>
+                            <th>Customer Ref</th>
                             <th>DocTotal</th>
                             <th>Status</th>
                             <th>Action</th>
