--- a/SAPWeb/Views/SalesQuotation/Create.cshtml
+++ b/SAPWeb/Views/SalesQuotation/Create.cshtml
@@ -14,6 +14,7 @@
         adminRigth = "";
     }
     string whsCode = SessionUtility.U_WhsCode;
+    var seriesQuotation = ViewBag.Series as List<SeriesQuotation>;
 }
 
 <div class="row">
@@ -126,13 +127,20 @@
                     <div class="form-group">
                         <label for="txtSeries">Series</label>
                         <select id="ddlSeries" class="form-control" data-series="@Model.Series">
+                           @if(seriesQuotation!=null && seriesQuotation.Count>0)
+                           {
+                               foreach (var item in seriesQuotation)
+                               {
+                                   <option value="@item.Series">@item.U_SERIES</option>
+                               }
+                           }
                         </select>
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
                         <label for="txtQuotationNumber ">Quotation Number </label>
-                        <input type="text" class="form-control" id="txtQuotationNumber" value="@Model.DocEntry" readonly>
+                        <input type="text" class="form-control" id="txtQuotationNumber" value="@(Model.DocNum.HasValue?Model.DocNum.Value:Model.DocEntry)" readonly>
                     </div>
                 </div>
                 <div class="col-md-2">
@@ -433,15 +441,15 @@
             $('#txtPostingDate').datepicker({
                 todayHighlight: true,
                 format: 'dd/mm/yyyy',
-            }).datepicker("setDate", new Date($("#txtPostingDate").attr('value').split('-').reverse().join('-')));
+            }).datepicker("setDate", new Date($("#txtPostingDate").attr('value')));
             $('#txtDueDate').datepicker({
                 todayHighlight: true,
                 format: 'dd/mm/yyyy',
-            }).datepicker("setDate", new Date($("#txtDueDate").attr('value').split('-').reverse().join('-')));
+            }).datepicker("setDate", new Date($("#txtDueDate").attr('value')));
             $('#txtDocumentDate').datepicker({
                 todayHighlight: true,
                 format: 'dd/mm/yyyy',
-            }).datepicker("setDate", new Date($("#txtDocumentDate").attr('value').split('-').reverse().join('-')));
+            }).datepicker("setDate", new Date($("#txtDocumentDate").attr('value')));
         }
         $("#txtPostingDate").datepicker("destroy");
     })
